--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,9 @@ output:
 
 ## Introduction
 
-Do higher teacher salaries contribute to enhanced student academic performance? In this study, I plan to examine how higher teacher salaries contribute to student academic outcomes(for this study academic outcomes will be measured by SAT scores since the SAT is seen as a national benchmark examination to gauge student academic performance). I hypothesize that higher teacher salaries will contribute to better student academic outcomes since teachers will be more committed to educating their students, contributing to better classroom instruction, and therefore better educational outcomes for the students. When teachers are paid less, I believe that they will be less committed to their jobs, and this will mean that students receive a lower quality of education and will likely mean that the future educational outcomes of the students are worse. The data source I’m using is the Massachusetts Public School Data for the year 2017, and my sample size is 1800 Public schools in Massachusetts, including elementary, middle, and high schools. My unit of analysis is an individual school, for example Abington High School. The explanatory variables of interest are average salary and total salary. The variable will be measured in United States dollars. My outcome variables include various measures of academic performance, specifically average SAT Math and Reading scores for students from the school and the number of high school graduates from the school. For instance, if the average salary variable was equal to $45,000, that means that the average teacher salary was $45,000. Likewise for the outcome variable, if the average  SAT Math score for a school is 700, this corresponds to an average SAT math score of 700. This data is taken from the Massachusetts Public School data for the year 2017 and its validity is established by the fact that it comes directly from the Massachusetts Department of Elementary and Secondary Education. If I observe higher average SAT scores when teacher pay is higher, then that will mean that higher teacher pay does correspond to better educational outcomes for students. However, if I observe that average SAT scores and graduation rates are not significantly higher when teacher pay is higher, then that will mean that teacher pay does not have a significant impact on educational outcomes. When I run a regression of average SAT scores and high school graduation rates on average teacher salary as an indicator variable a positive, significant coefficient would indicate support of my hypothesis.
+Do higher teacher salaries contribute to enhanced student academic performance? In this study, I plan to examine how higher teacher salaries contribute to student academic outcomes(for this study academic outcomes will be measured by SAT scores since the SAT is seen as a national benchmark examination to gauge student academic performance). I hypothesize that higher teacher salaries will contribute to better student academic outcomes since teachers will be more committed to educating their students, contributing to better classroom instruction, and therefore better educational outcomes for the students. When teachers are paid less, I believe that they will be less committed to their jobs, and this will mean that students receive a lower quality of education and will likely mean that the future educational outcomes of the students are worse. The data source I’m using is the Massachusetts Public School Data for the year 2017, and my sample size is 1800 Public schools in Massachusetts, including elementary, middle, and high schools. 
+
+My research design is a cross-sectional study that compares data between public high schools in the state of Massachusetts for the year 2017. My unit of analysis is an individual school, for example Abington High School. The explanatory variables of interest are average salary and total salary. The variable will be measured in United States dollars. My outcome variables include various measures of academic performance, specifically average SAT Math and Reading scores for students from the school and the number of high school graduates from the school. For instance, if the average salary variable was equal to $45,000, that means that the average teacher salary was $45,000. Likewise for the outcome variable, if the average  SAT Math score for a school is 700, this corresponds to an average SAT math score of 700. This data is taken from the Massachusetts Public School data for the year 2017 and its validity is established by the fact that it comes directly from the Massachusetts Department of Elementary and Secondary Education. If I observe higher average SAT scores when teacher pay is higher, then that will mean that higher teacher pay does correspond to better educational outcomes for students. However, if I observe that average SAT scores and graduation rates are not significantly higher when teacher pay is higher, then that will mean that teacher pay does not have a significant impact on educational outcomes. When I run a regression of average SAT scores and high school graduation rates on average teacher salary as an indicator variable a positive, significant coefficient would indicate support of my hypothesis.
 
 
 ## Data
@@ -28,6 +30,7 @@ library(readr)
 
 data_final <- read_csv("MA_Public_Schools_2017.csv")
 
+##In this code chunk, I load the data packages that I will use for my project. The citation is provided in the data section.
 ```
 ```{r Filtering, Tidying, and Mutating the Dataset}
 data_highschool <- data_final |>
@@ -37,6 +40,8 @@ data_highschool <- data_final |>
 
 data_highschool <- data_highschool |>
   mutate(Average_SAT = `Average SAT_Reading` + `Average SAT_Writing` + `Average SAT_Math`)
+
+##Filtering the data and creating a Average_SAT variable that will be used throughout the rest of the project.
 ```
 
 
@@ -53,9 +58,10 @@ ggplot(data = data_highschool,
        subtitle = "Among MA Public highschools",
        source = "Massachusetts Public School Data, 2017")
 ```
-In this section, I've created scatter plot of Average SAT score compared to the Average salary per school overlaid with a line of best fit for the data. Looking at just the data points on the scatter plot, it appears that there is little correlation between the two variables. However, when we overlay the scatter plot with a line of best fit, we can see that there is a negative correlation between average salary per school and the average SAT score. The negative slope on the line means indicates that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, we would expect to see lower SAT test scores. One note is that this line of best fit is likely skewed by the presence of certain outlier values both those with very high SAT scores and those with very low SAT scores. Looking at the plot, it seems that if these outlier points were eliminated, the line of best fit would be close to linear. This suggests that at least there is no increase or improvement in SAT scores as the average teacher salary per school increases. However, with the outlier data points left in the dataset, it appears that there is a negative relationship between Average Teacher Salary and Average SAT score. Therefore, the data suggest that student SAT performance is negatively affected by increasing teacher salaries.
+In this section, I've created scatter plot of Average SAT score compared to the Average salary per school overlaid with a line of best fit for the data. Looking at just the data points on the scatter plot, it appears that there is little correlation between the two variables. However, when I overlay the scatter plot with a line of best fit, I can see that there is a negative correlation between average salary per school and the average SAT score. The negative slope on the line means indicates that the correlation between salary totals and SAT test scores is negative. Therefore, as teacher salary totals increase, I would expect to see lower SAT test scores. One note is that this line of best fit is likely skewed by the presence of certain outlier values both those with very high SAT scores and those with very low SAT scores. Looking at the plot, it seems that if these outlier points were eliminated, the line of best fit would be close to linear. This suggests that at least there is no increase or improvement in SAT scores as the average teacher salary per school increases. However, with the outlier data points left in the dataset, it appears that there is a negative relationship between Average Teacher Salary and Average SAT score. Therefore, the data suggest that student SAT performance is negatively affected by increasing teacher salaries.
 
 ## Results
+To begin studying the results, I wanted to gain a preliminary understanding of what the results looked like, especially since my initial hypothesis appeared to be contradicted by the scatter plot I created. Therefore, I chose to take a quick sample of the 5 highest and lowest average salaries and view their associated average SAT scores. 
 ```{r SAT Scores for Minimum and Maximum Pay}
 library(tidyverse)
 salary_tibble <- data_highschool |>
@@ -76,10 +82,12 @@ knitr::kable(least_paid, col.names = c("5 Lowest Average Salaries in dollars", "
 
 
 
-##In this code, we are collecting the 5 schools with the highest average salary and the 5 schools with the lowest average salary, 
+##In this code, I are collecting the 5 schools with the highest average salary and the 5 schools with the lowest average salary, 
 ##and getting the average SAT score at each of those schools.
 ```
-Looking at the data for the 5 highest and 5 lowest average salaries by school, we can see that schools with the 5 highest average salaries tend to have higher average SAT scores than districts than schools with the 5 lowest average salaries. This points to the need for further analysis of the data, since this does not conclusively suppourt the relationship we found in the previous scatter plot.
+This graph is interesting, primarily because it seemingly contradicts main findings that will follow in the rest of this section. Looking at the data for the 5 highest and 5 lowest average salaries by school, I can see that schools with the 5 highest average salaries tend to have higher average SAT scores than districts than schools with the 5 lowest average salaries. This points to the need for further analysis of the data, since this does not conclusively support the relationship I found in the previous scatter plot. I deemed this preliminary analysis anomalous based on the key results I found below.
+
+In order to gain a more conclusive understanding about the results, I chose to run a linear regression on the data since that is one of the best tools for establishing a correlation between two variables and seeing what that correlation might be.
 
 ```{r Linear Coefficient Calculation between Average Salary and Average SAT}
 fit <- lm(`Average Salary` ~ Average_SAT, data = data_highschool)
@@ -89,7 +97,9 @@ modelsummary::modelsummary(fit,
                                          "p = {p.value}"),
                            gof_map = c("nobs", "r.squared", "adj.r.squared"))
 ```
-In the above code, I ran a linear regression so that we could get a clearer picture of the relationship between average Salary and Average SAT scores. As we can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases the average SAT score for the high school decreases by roughly 4.4 points. This suggests a correlation, but does not necessarily imply a causal effect, we simply know that higher average teacher salaries are linked with lower average SAT scores. There could be many other factors influencing student SAT scores outside of teacher pay. 
+In the above code, I ran a linear regression so that I could get a clearer picture of the relationship between average Salary and Average SAT scores. As I can see from the coefficients for the linear regression, looking at all high schools in the state of Massachusetts for the year 2017, as average Salary increases by $1000 the average SAT score for the high school decreases by roughly 4.4 points. This coefficient has a p value of 0.100 which suggests that at an alpha level of 0.101 I can interpret this result as statistically significant. This suggests a correlation, but does not necessarily imply a causal effect, I simply know that for this data set higher average teacher salaries are linked with lower average SAT scores. This contradicts are initial hypothesis and rigorously establishes that for the year 2017, there was a negative correlation between increasing teacher salaries and average SAT scores. It is important to note that there could be many other factors influencing student SAT scores outside of teacher pay, which I will discuss further in the sections that follow.
+
+Though the above linear regression is helpful in understanding the data, it is more helpful to look at a linear regression that controls for potential confounding and lurking variables that could be skewing the data in a certain direction or otherwise affecting the data. Therfore, I next ran a linear coefficient that controlled for two potentially important confounding and lurking variables.
 
 ```{r Linear Coefficient Calculator with controlling for possible confounding factors}
 multitable2017 <- lm(`Average Salary` ~ Average_SAT + `Average Class Size` + `Economically Disadvantaged`, data = data_highschool) |>
@@ -98,7 +108,9 @@ multitable2017 <- lm(`Average Salary` ~ Average_SAT + `Average Class Size` + `Ec
   knitr::kable(digits = 2)
 print(multitable2017)
 ```
-Here, I ran a linear regression that controlled for possible confounders like large class size and the number of students who were classified into the "Economically Disadvantaged" group. I expected that controlling for possible confounding variables like this one would lead to a less negative coefficient between teacher salary and student SAT score performance, however controlling for this variables very surprisingly resulted in an even more negative linear coefficient between Average Salary and Average SAT score. This further suppourts the claim that simply increasing teacher salaries do not contribute to enhanced student performance, at least when measuring student performance based on Average SAT scores. 
+Here, I ran a linear regression that controlled for possible confounders like large class size and the number of students who were classified into the "Economically Disadvantaged" group. I expected that controlling for possible confounding variables like this one would lead to a less negative coefficient between teacher salary and student SAT score performance, however controlling for this variables very surprisingly resulted in an even more negative linear coefficient between Average Salary and Average SAT score. In this case, the coefficient betwen Average Salary and Average SAT is -5.52, suggesting that as average salary increases by $1000, the average SAT score, with controls for average class size and the number of students who are economically disadvantaged, drops by 5.52 points. This statistic has a p-value of 0.07 which means at an alpha level of 0.1. I can interpret this result as statistically significant. Again, this suggests a correlation, but does not necessarily imply a causal effect, I simply know that for this data set higher average teacher salaries are correlated with lower average SAT scores. This further supports the claim that simply increasing teacher salaries do not contribute to enhanced student performance, at least when measuring student performance based on Average SAT scores. 
+
+In this next section I created a series of step wise pay ranges and sorted the average SAT scores for each of those pay ranges in order to see how the average SAT score was changing as the salaries were incremented.
 
 ```{r Averge SAT Score per Pay Range}
 data_highschool <- data_highschool |>
@@ -121,10 +133,10 @@ sat_payrange <- data_highschool |>
 knitr::kable(sat_payrange, col.names = c("Pay Range", "Average SAT Score"), digits = 0)
 
 ```
-In this chart, we grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. We then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns, average teacher pay and average student SAT scores. From this section, it becomes a little bit more clear that the relationship between average SAT scores and average teacher salary is not strictly linear. As the average salary range increases teacher pay tends to fluctuate, with periodic spikes. I believe that spikes could be skewing some of the data. For instance, there is a major drop in average SAT in the pay range between $85,000 and 90,000. This is major drop compared to the other pay ranges around it, since all the pay pervious pay ranges $80,000 to 85,000 and $75,000 to 80,000 both had average SAT scores around 1500. This drop is difficult to explain both in terms of the data and in the context of the study, and further investigation might be needed to see what causes this drop. Overall, from the data for Public High Schools in Massachusetts in 2017, it is clear that in general, higher average teacher salary values are associated with lower values for average SAT scores. These results contradict my hypothesis that higher teacher salaries would contribute to better student academic performance since an examination of the data shows that higher average teacher salaries correlate to worser student outcomes in terms of average SAT scores.
+In this chart, I grouped the average salaries into 9 different categories. under $65,000; between $65,000 to 70,000; $70,000 to 75,000; $75,000 to 80,000; $80,000 to 85,000; $85,000 to 90,000; $90,000 to 95,000; and greater than $95,000. I then calculated the average SAT scores for each of these pay ranges. This again allows us to better understand the correlation between our two data columns, average teacher pay and average student SAT scores. From this section, it becomes a little bit more clear that the relationship between average SAT scores and average teacher salary is not strictly linear. As the average salary range increases teacher pay tends to fluctuate, with periodic spikes. I believe that spikes could be skewing some of the data. For instance, there is a major drop in average SAT in the pay range between $85,000 and 90,000. This is major drop compared to the other pay ranges around it, since all the pay pervious pay ranges $80,000 to 85,000 and $75,000 to 80,000 both had average SAT scores around 1500. This drop is difficult to explain both in terms of the data and in the context of the study, and further investigation might be needed to see what causes this drop. Overall, from the data for Public High Schools in Massachusetts in 2017, it is clear that in general, higher average teacher salary values are associated with lower values for average SAT scores. These results contradict my hypothesis that higher teacher salaries would contribute to better student academic performance since an examination of the data shows that higher average teacher salaries correlate to worser student outcomes in terms of average SAT scores.
 
 ## Potential Explanations of Results
-Next, we should look at some possible factors that could explain this negative correlation between average teacher salary values and average SAT scores. One potential factor could be that areas with schools that are known for being difficult to teach might have to pay teachers more to work at those schools whilst still having low SAT scores. Furthermore, it could be that low SAT scores mean that schools must pay teachers more in an effort to boost student performance. An additional factor could be that some dsitricts have budget constrains that mean that paying higher average teacher salaries means they are unable to invest in other educational resources and this could be why student outcomes are not improving. 
+Next, I should look at some possible factors that could explain this negative correlation between average teacher salary values and average SAT scores. One potential factor could be that areas with schools that are known for being difficult to teach might have to pay teachers more to work at those schools whilst still having low SAT scores. Furthermore, it could be that low SAT scores mean that schools must pay teachers more in an effort to boost student performance. An additional factor could be that some dsitricts have budget constrains that mean that paying higher average teacher salaries means they are unable to invest in other educational resources and this could be why student outcomes are not improving. 
 
 
 ## Possible Confounding Factors
@@ -161,4 +173,6 @@ ggplot(data = data_highschool,
 This last scatter plot represents the salary totals for teachers on the x-axis rather than just the average salary. This helps to provide a clearer picture of how much a school actually spends on paying its teachers and how that correlates with average SAT scores for that school. This graph also shows a negative correlation, which supports the overall idea that simply spending more to educate students is not an effective strategy for boosting SAT performance.
 
 ## Conclusions
-From the data it is clear that there was a negative correlation between teacher salaries and average SAT scores for Public high schools in the state of Massachusetts for the year 2017. Though this data set represents just one state's public high schools in a single school year, the data still points to an interesting, if slightly troubling, conclusion. With that being said, its important to not firstly that correlation does not imply that there is a causal relationship between the two variables. There are some potential explanations for why this data is the way it is, which I discussed in the explanation of results section. Overall, I was able to answer my initial research question which was "Do higher teacher salaries contribute to enhanced student academic performance?". In my study, I used student SAT scores as a benchmark for academic performance compared average SAT scores to average teacher salaries. The findings from my study did not support my initial hypothesis that higher teacher salaries would contribute to better student SAT performance. This finding surprised me since funding is a topic that is frequently at the forefront of education policy. From this data, we can see that there are a multitude of factors contributing to student performance and that simply raising teacher salaries(or raising in district expenditures as shown in the confounding variables section) might not be enough to improve student SAT scores. If I had more time and resources, I could improve my project by looking at a broader range of data and looking at different metrics. As mentioned before, SAT scores are not the 
+From the data it is clear that there was a negative correlation between teacher salaries and average SAT scores for Public high schools in the state of Massachusetts for the year 2017. Though this data set represents just one state's public high schools in a single school year, the data still points to an interesting, if slightly troubling, conclusion. With that being said, its important to not firstly that correlation does not imply that there is a causal relationship between the two variables. There are some potential explanations for why this data is the way it is, which I discussed in the explanation of results section. 
+
+Overall, I was able to answer my initial research question which was "Do higher teacher salaries contribute to enhanced student academic performance?". In my study, I used student SAT scores as a benchmark for academic performance compared average SAT scores to average teacher salaries. The findings from my study did not support my initial hypothesis that higher teacher salaries would contribute to better student SAT performance. This finding surprised me since funding is a topic that is frequently at the forefront of education policy. From this data, I can see that there are a multitude of factors contributing to student performance and that simply raising teacher salaries(or raising in district expenditures as shown in the confounding variables section) might not be enough to improve student SAT scores. One of the biggest threats to inference in this situation is that this study only examines one year. In the event that I had examine more years worth of data I would have been able to make stronger inferences about the data, as it stands I can only make inferences about the year 2017. In this case, interpreting causal effects is extremely difficult, even with controlling for many confounding variables, there are a myriad of factors that influence student educational outcomes from social policies to family matters, and this means that drawing any causal inference is extremely difficult. Even if I had the opportunity to design an experiment, that could establish causality it would be difficult not only since it is unethical to manipulate student education outcomes, even if the longer-term impacts of such an experiment or simulation could be positive, but also because of the fact that students, teachers, educational materials, and teaching styles are all variables that are difficult to control for. If I had more time and resources, I could improve my project by looking at a broader range of data and looking at different metrics. As mentioned before, SAT scores are not the only measure of student performance, so expanding the analysis to include AP scores and state test scores could be beneficial. Furthermore, looking at the data across all 50 states in the United States could be especially interesting.
